--- a/Jump/src/Navbar.css
+++ b/Jump/src/Navbar.css
@@ -1,6 +1,6 @@
 /* Navbar styles */
 .navbar {
-    background-color: #333;
+    background-color: #c74e08;
     color: white;
     padding: 10px 20px;
   }
