--- a/Jump/src/Navbar.css
+++ b/Jump/src/Navbar.css
@@ -1,6 +1,5 @@
-/* Navbar styles */
 .navbar {
-    background-color: #c74e08;
+    background-color: #d15b11;
     color: white;
     padding: 10px 20px;
   }
@@ -13,26 +12,45 @@
   
   .navbar-logo {
     font-size: 1.5rem;
-    font-weight: bold;
+    color: white;
   }
   
   .navbar-links {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 15px;
+    margin: 0;
+    padding: 0;
   }
   
-  .navbar-links li {
-    display: inline;
+  .button-link {
+    text-decoration: none; 
   }
   
-  .navbar-links a {
+  .Nav-Buttons {
+    background-color: #05090c;
     color: white;
-    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    cursor: pointer;
     font-size: 1rem;
+    transition: background-color 0.3s ease;
   }
+
+  .Nav-Buttons:hover {
+    background-color: #b45705;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+  }
+
   
-  .navbar-links a:hover {
-    text-decoration: underline;
+  button:active {
+    background-color: #003f7f;
   }
   
